--- a/CFN/IAM_1.yaml
+++ b/CFN/IAM_1.yaml
@@ -4,8 +4,17 @@ Description: AWS Config rule for SSH and RDP
 Parameters:
   AutomationRoleName:
     Type: String
-    Default: "FTA-ConfigAutoRemediation"
+    Default: "ConfigAutoRemediationRole"
     Description: role Name
+  AccountInventoryTable:
+    Type: String
+    Description: The name of the DynamoDB table
+  ResourceExclussionTable:
+    Type: String
+    Description: The name of the DynamoDB table
+  SecToolingS3QuickSightBucket:
+    Type: String
+    Description: Name of Quick Sight S3 bucket for Security Tooling
   excludePermissionBoundaryPolicy:
     Type: String
     Default: "true"
@@ -24,7 +33,7 @@ Resources:
     Type: AWS::SSM::Document
     Properties:
       DocumentType: Automation
-      Name: FTA-DetachIAMPoliciesWithAdminAccess
+      Name: DetachIAMPoliciesWithAdminAccess
       Content:
         description: >-
           ## This document detaches an AWS IAM Policy using the [DetachGroupPolicy](https://docs.aws.amazon.com/IAM/latest/APIReference/API_DetachGroupPolicy.html), 
@@ -52,19 +61,19 @@ Resources:
             description: (Required) IAM resource unique identifier for the IAM Policy.
           GetTagsLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetTagsbyResource"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:GetTagsbyResource"
           GetInventoryLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetAccountInventory"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:GetAccountInventory"
           ExclusionTable:
             type: String
-            default: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-resource-tags-exclusion-5d9747"
+            default: !Ref ResourceExclussionTable
           InventoryTable:
             type: String
-            default: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-Account-Inventory-f74cd8"
+            default: !Ref AccountInventoryTable
           QuickSightS3:
             type: String
-            default: "quick-sight-report-exclusion-622c56"
+            default: !Ref SecToolingS3QuickSightBucket
         mainSteps:
           - action: 'aws:invokeLambdaFunction'
             name: 'InvokeMyLambdaFunction'
@@ -139,7 +148,7 @@ Resources:
   AWSConfigRule:
     Type: AWS::Config::ConfigRule
     Properties:
-      ConfigRuleName: FTA-DetachIAMPolicyWithAdminAccess
+      ConfigRuleName: DetachIAMPolicyWithAdminAccess
       Description: "Checks whether the default version of AWS Identity and Access Management (IAM) policies do not have administrator access. If any statement has \"Effect\": \"Allow\" with \"Action\": \"*\" over \"Resource\": \"*\", the rule is non-compliant."
       InputParameters:
         excludePermissionBoundaryPolicy: !If
