--- a/CFN/Lambda_1.yaml
+++ b/CFN/Lambda_1.yaml
@@ -4,8 +4,17 @@ Description: AWS Config rule for SSH and RDP
 Parameters:
   AutomationRoleName:
     Type: String
-    Default: "FTA-ConfigAutoRemediation"
+    Default: "ConfigAutoRemediationRole"
     Description: role Name
+  AccountInventoryTable:
+    Type: String
+    Description: The name of the DynamoDB table
+  ResourceExclussionTable:
+    Type: String
+    Description: The name of the DynamoDB table
+  SecToolingS3QuickSightBucket:
+    Type: String
+    Description: Name of Quick Sight S3 bucket for Security Tooling
 Resources:
   # -------------------------------------------------------------------------------------------------------------------------------------------------------
   # [Lambda.1] Lambda functions should prohibit public access
@@ -14,7 +23,7 @@ Resources:
     Type: AWS::SSM::Document
     Properties:
       DocumentType: Automation
-      Name: FTA-RestrictPublicLambdaAccess
+      Name: RestrictPublicLambdaAccess
       Content:
         schemaVersion: '0.3'
         assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AutomationRoleName}'
@@ -35,19 +44,19 @@ Resources:
             default: "Lambda.1"
           GetTagsLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetTagsbyResource"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:GetTagsbyResource"
           GetInventoryLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetAccountInventory"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:GetAccountInventory"
           ExclusionTable:
             type: String
-            default: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-resource-tags-exclusion-5d9747"
+            default: !Ref ResourceExclussionTable
           InventoryTable:
             type: String
-            default: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-Account-Inventory-f74cd8"
+            default: !Ref AccountInventoryTable
           QuickSightS3:
             type: String
-            default: "quick-sight-report-exclusion-622c56"
+            default: !Ref SecToolingS3QuickSightBucket
         mainSteps:
           - name: 'InvokeMyLambdaFunction'
             action: 'aws:invokeLambdaFunction'
@@ -116,7 +125,7 @@ Resources:
   AWSConfigRule:
     Type: AWS::Config::ConfigRule
     Properties:
-      ConfigRuleName: FTA-LambdaPublicAccessProhibited
+      ConfigRuleName: LambdaPublicAccessProhibited
       Description: Checks whether the Lambda function policy prohibits public access.
       Scope: 
         ComplianceResourceTypes: 
