--- a/CFN/EC2_14.yaml
+++ b/CFN/EC2_14.yaml
@@ -4,8 +4,17 @@ Description: AWS Config rule for SSH and RDP
 Parameters:
   AutomationRoleName:
     Type: String
-    Default: "FTA-ConfigAutoRemediation"
+    Default: "ConfigAutoRemediationRole"
     Description: role Name
+  AccountInventoryTable:
+    Type: String
+    Description: The name of the DynamoDB table
+  ResourceExclussionTable:
+    Type: String
+    Description: The name of the DynamoDB table
+  SecToolingS3QuickSightBucket:
+    Type: String
+    Description: Name of Quick Sight S3 bucket for Security Tooling
 
 Resources:
   # -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -15,7 +24,7 @@ Resources:
     Type: AWS::SSM::Document
     Properties:
       DocumentType: Automation
-      Name: FTA-DisablePublicAccessForSecurityGroup
+      Name: DisablePublicAccessForSecurityGroup
       Content:
         description: >-
           ## Disable RDP ports opened to IP address specified,
@@ -48,19 +57,19 @@ Resources:
             default: ""
           GetTagsLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetTagsbyResource"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:GetTagsbyResource"
           GetInventoryLambda:
             type: String
-            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:FTA-GetAccountInventory"
+            default: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:GetAccountInventory"
           ExclusionTable:
             type: String
-            default: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-resource-tags-exclusion-5d9747"
+            default: !Ref ResourceExclussionTable
           InventoryTable:
             type: String
-            default: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-Account-Inventory-f74cd8"
+            default: !Ref AccountInventoryTable
           QuickSightS3:
             type: String
-            default: "quick-sight-report-exclusion-622c56"
+            default: !Ref SecToolingS3QuickSightBucket
         mainSteps:
           - action: 'aws:invokeLambdaFunction'
             name: 'InvokeMyLambdaFunction'
@@ -148,7 +157,7 @@ Resources:
   AWSConfigRule:
     Type: AWS::Config::ConfigRule
     Properties:
-      ConfigRuleName: FTA-RestrictRDPPublicAccess-Tags
+      ConfigRuleName: RestrictRDPPublicAccess-Tags
       Description: Restrict public access to 3389 port
       InputParameters:
         blockedPort1: 3389
