--- a/CFN/GetAccountInventoryLambda.yaml
+++ b/CFN/GetAccountInventoryLambda.yaml
@@ -6,12 +6,15 @@ Parameters:
     Type: String
     Default: "quick-sight-report-exclusion-622c56"
     Description: Name of Quick Sight S3 bucket for Security Tooling
+  AccountInventoryTable:
+    Type: String
+    Description: The name of the DynamoDB table
 Resources:
   # Define the Lambda function
   MyLambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: FTA-GetAccountInventory
+      FunctionName: GetAccountInventory
       Handler: index.lambda_handler
       Role: !GetAtt LambdaExecutionRole.Arn
       Code:
@@ -98,7 +101,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupClass: STANDARD
-      LogGroupName: !Sub /aws/lambda/FTA-GetAccountsInventory-${AWS::Region}
+      LogGroupName: !Sub /aws/lambda/GetAccountsInventory-${AWS::Region}
       RetentionInDays: 30
 
   # Define the IAM role for the Lambda function
@@ -114,7 +117,7 @@ Resources:
             Action: sts:AssumeRole
           - Effect: Allow
             Principal: 
-              AWS: !Sub arn:aws:iam::${AWS::AccountId}:role/FTA-ConfigAutoRemediation
+              AWS: !Sub arn:aws:iam::${AWS::AccountId}:role/ConfigAutoRemediationRole
             Action: sts:AssumeRole
       Policies:
         - PolicyName: LambdaBasicExecution
@@ -131,7 +134,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - dynamodb:GetItem
-                Resource: "arn:aws:dynamodb:us-east-1:412090077236:table/FTA-Account-Inventory-f74cd8"
+                Resource: !Ref AccountInventoryTable
               - Effect: Allow
                 Action:
                   - s3:ListBucket
