updating bucket name

--- a/CFN/base.yaml
+++ b/CFN/base.yaml
@@ -4,7 +4,7 @@ Description: AWS Config rules
 Parameters:
   cfnTemplatesBucketURL:
     Type: String
-    Default: "https://s3.amazonaws.com/<bucket name>"
+    Default: "https://s3.amazonaws.com/aws-blogs-artifacts-public/INTAUTO-27"
     Description: S3 Bucket URL containing CFN templates e.g. https://<name>.s3.amazonaws.com/<AWS_REGION>/<VERSION>
   ExclussionTableARN:
     Type: String
